[package]
name = "t12_fast_softbodies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy-inspector-egui = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"